# tokenspy

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  security.yml  tests.yml
api-reference/: index.html
ci/: index.html
cli/: index.html
dashboard/: index.html
docs/: api-reference.md  ci.md  cli.md  dashboard.md  evals.md  getting-started.md  how-it-works.md  index.md  otel.md  prompts.md  quickstart.md  tracing.md
docs/assets/: extra.css
docs/integrations/: github-actions.md  langchain.md
docs/usage/: budget-alerts.md  context-manager.md  decorator.md  persistence.md  programmatic.md  streaming.md
evals/: index.html
getting-started/: index.html
how-it-works/: index.html
integrations/github-actions/: index.html
integrations/langchain/: index.html
otel/: index.html
prompts/: index.html
quickstart/: index.html
scripts/: screenshot_banner.py  screenshot_dashboard.py  screenshot_flamegraph.py
search/: search_index.json
tests/: test_budget.py  test_ci.py  test_cli.py  test_eval_dataset.py  test_eval_scorers.py  test_langchain.py  test_prompts.py  test_streaming.py  test_tracing.py
tokenspy/: __init__.py  ci.py  cli.py  otel.py  profiler.py  prompts.py  tracing.py  tracker.py
tokenspy/eval/: __init__.py  dataset.py  experiment.py  scorers.py
tokenspy/integrations/: __init__.py  langchain.py
tokenspy/providers/: anthropic.py  openai.py
tokenspy/server/: __init__.py  app.py
tokenspy/server/static/: index.html
tracing/: index.html
usage/budget-alerts/: index.html
usage/context-manager/: index.html
usage/decorator/: index.html
usage/persistence/: index.html
usage/programmatic/: index.html
usage/streaming/: index.html
