[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenspy"
version = "0.1.2"
description = "cProfile for LLMs — find which function is burning your AI budget. Flame graph output, zero-config, no proxy."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Pinaki Mishra", email = "pinakimishra95@hotmail.com" }
]
requires-python = ">=3.10"
keywords = ["llm", "cost", "profiler", "openai", "anthropic", "flamegraph", "token", "optimization", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero required dependencies — intercepts whatever SDK the user has installed
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.30.0"]
google = ["google-generativeai>=0.7.0"]
langchain = ["langchain-core>=0.2.0"]
all = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "langchain-core>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tokenspy = "tokenspy.cli:main"

[project.urls]
Homepage = "https://github.com/pinakimishra95/tokenspy"
Documentation = "https://github.com/pinakimishra95/tokenspy#readme"
Issues = "https://github.com/pinakimishra95/tokenspy/issues"

[tool.hatch.build.targets.wheel]
packages = ["tokenspy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
